fix for main nav and user nav text overlap

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -505,7 +505,7 @@ header .navbar{
 
 .navbar-collapse{
     position: relative;
-    z-index: 999;
+    z-index: 9;
 }
 
 .navbar-collapse .nav-link{
